--- a/aaa.html
+++ b/aaa.html
@@ -47,7 +47,7 @@
     </head>
     <body>
         <div>
-            <p class="san">Саня Лучший!</p>
+            <p class="san">Санчо просто Наилучший!</p>
             <a href="https://htmlbook.ru/samcss/klassy" class="link">НАЖМИ НА МЕНЯ</a>
         </div>
         <div>
